--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
-html {
-    color: goldenrod;
+* {
+    color: rgb(131, 112, 60);
     font-family:'Times New Roman', Times, serif;
+    background-color: rgb(248, 193, 125);
 }
