--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,29 @@
     color: rgb(131, 112, 60);
     font-family:'Times New Roman', Times, serif;
     background-color: rgb(248, 193, 125);
+    margin: 0;
+}
+
+#homepage-header {
+    text-align: center;
+    font-size: 2vw;
+    border-bottom: 2px solid rgb(131, 112, 60);
+}
+
+#homepage-main {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: 2vw;
+}
+
+.recipe-list {
+    border: 2px solid rgb(131, 112, 60);
+    border-radius: 15px;
+}
+
+.recipe-list li {
+    margin: 10px;
+    list-style-type: circle;
 }
