--- a/styles/style.css
+++ b/styles/style.css
@@ -44,6 +44,7 @@ a:hover {
 .recipe-image {
     border: 2px solid rgb(131, 112, 60);
     border-radius: 15px;
+    width: 30%;
 }
 
 .recipe-info {
